[gd_scene load_steps=22 format=3 uid="uid://c6eyxf67six6b"]

[ext_resource type="Script" uid="uid://c2k4pfaso6hbr" path="res://script/tower_defense_main_menu.gd" id="1_34mdo"]
[ext_resource type="Texture2D" uid="uid://cdceikffnbx6g" path="res://Icons/settings.png" id="1_ivcbp"]
[ext_resource type="Texture2D" uid="uid://bpu0ik55tbqft" path="res://Icons/play-button-arrowhead.png" id="1_u7ntx"]
[ext_resource type="Texture2D" uid="uid://cw8ul2t3t06d6" path="res://Icons/close.png" id="3_fdid3"]
[ext_resource type="Texture2D" uid="uid://c2c3iiod7ghj8" path="res://Icons/store.png" id="3_r0dro"]
[ext_resource type="FontFile" uid="uid://dyar6fh26gmft" path="res://Fonts/Inter Extra Bold 800.otf" id="4_8r7t0"]
[ext_resource type="Texture2D" uid="uid://c2ojrvgk8tya1" path="res://Icons/school-bag.png" id="5_npsxf"]
[ext_resource type="PackedScene" uid="uid://dw3dcinyneec7" path="res://scene/saved_data_interface.tscn" id="6_j3rf8"]
[ext_resource type="PackedScene" uid="uid://cyskb3ty2c78c" path="res://scene/settings.tscn" id="7_awfu6"]
[ext_resource type="PackedScene" uid="uid://ds4ktts3q3dxf" path="res://scene/shop.tscn" id="10_476cf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sq1nn"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u7m73"]
bg_color = Color(1.90116e-06, 0.33282, 0.453138, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7027y"]
bg_color = Color(5.17406e-07, 0.21106, 0.293604, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxtes"]
bg_color = Color(1.90116e-06, 0.33282, 0.453138, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xqt5n"]
content_margin_left = 5.0
bg_color = Color(1.90116e-06, 0.33282, 0.453138, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m0jbp"]
content_margin_left = 5.0
bg_color = Color(5.17406e-07, 0.21106, 0.293604, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fsl7j"]
content_margin_left = 5.0
bg_color = Color(1.90116e-06, 0.33282, 0.453138, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="Animation" id="Animation_e1hrr"]
resource_name = "GetDownMisterPresident"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(587, 540), Vector2(587, 721)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SettingsButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(423, 574), Vector2(423, 721)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ExitButton:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(789, 575), Vector2(789, 721)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShopButton:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(503, 574), Vector2(503, 721)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("InventoryButton:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(709, 574), Vector2(709, 721)]
}

[sub_resource type="Animation" id="Animation_1bpje"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(587, 540)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SettingsButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(503, 574)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ExitButton:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(709, 575)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShopButton:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(503, 574)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("InventoryButton:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(709, 574)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ic7f1"]
_data = {
&"GetDownMisterPresident": SubResource("Animation_e1hrr"),
&"RESET": SubResource("Animation_1bpje")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qjmw7"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="TowerDefenseMainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_34mdo")

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 1
offset_left = 423.0
offset_top = 574.0
offset_right = 491.0
offset_bottom = 638.0
theme_override_constants/icon_max_width = 30
theme_override_font_sizes/font_size = 3
theme_override_icons/icon = ExtResource("1_ivcbp")
theme_override_styles/focus = SubResource("StyleBoxFlat_sq1nn")
theme_override_styles/hover = SubResource("StyleBoxFlat_u7m73")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7027y")
theme_override_styles/normal = SubResource("StyleBoxFlat_cxtes")
icon_alignment = 1

[node name="ShopButton" type="Button" parent="."]
layout_mode = 0
offset_left = 503.0
offset_top = 574.0
offset_right = 571.0
offset_bottom = 638.0
theme_override_constants/icon_max_width = 30
theme_override_font_sizes/font_size = 3
theme_override_icons/icon = ExtResource("3_r0dro")
theme_override_styles/focus = SubResource("StyleBoxFlat_sq1nn")
theme_override_styles/hover = SubResource("StyleBoxFlat_u7m73")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7027y")
theme_override_styles/normal = SubResource("StyleBoxFlat_cxtes")
icon_alignment = 1

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 587.0
offset_top = 540.0
offset_right = 693.0
offset_bottom = 640.0
theme_override_constants/icon_max_width = 40
theme_override_font_sizes/font_size = 3
theme_override_icons/icon = ExtResource("1_u7ntx")
theme_override_styles/focus = SubResource("StyleBoxFlat_sq1nn")
theme_override_styles/hover = SubResource("StyleBoxFlat_xqt5n")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m0jbp")
theme_override_styles/normal = SubResource("StyleBoxFlat_fsl7j")
icon_alignment = 1

[node name="InventoryButton" type="Button" parent="."]
layout_mode = 0
offset_left = 709.0
offset_top = 574.0
offset_right = 777.0
offset_bottom = 638.0
theme_override_constants/icon_max_width = 30
theme_override_font_sizes/font_size = 3
theme_override_icons/icon = ExtResource("5_npsxf")
theme_override_styles/focus = SubResource("StyleBoxFlat_sq1nn")
theme_override_styles/hover = SubResource("StyleBoxFlat_u7m73")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7027y")
theme_override_styles/normal = SubResource("StyleBoxFlat_cxtes")
icon_alignment = 1

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 789.0
offset_top = 575.0
offset_right = 857.0
offset_bottom = 639.0
theme_override_constants/icon_max_width = 30
theme_override_font_sizes/font_size = 3
theme_override_icons/icon = ExtResource("3_fdid3")
theme_override_styles/focus = SubResource("StyleBoxFlat_sq1nn")
theme_override_styles/hover = SubResource("StyleBoxFlat_u7m73")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7027y")
theme_override_styles/normal = SubResource("StyleBoxFlat_cxtes")
icon_alignment = 1

[node name="Play" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 616.0
offset_top = 648.0
offset_right = 659.0
offset_bottom = 671.0
theme_override_fonts/font = ExtResource("4_8r7t0")
text = "PLAY"

[node name="Shop" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 514.0
offset_top = 642.0
offset_right = 560.0
offset_bottom = 665.0
theme_override_fonts/font = ExtResource("4_8r7t0")
text = "SHOP
"

[node name="Settings" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 415.0
offset_top = 642.0
offset_right = 497.0
offset_bottom = 665.0
theme_override_fonts/font = ExtResource("4_8r7t0")
text = "SETTINGS
"

[node name="Exit" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 803.0
offset_top = 642.0
offset_right = 841.0
offset_bottom = 665.0
theme_override_fonts/font = ExtResource("4_8r7t0")
text = "EXIT"

[node name="Inventory" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 694.0
offset_top = 642.0
offset_right = 790.0
offset_bottom = 665.0
theme_override_fonts/font = ExtResource("4_8r7t0")
text = "INVENTORY
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ic7f1")
}

[node name="SavedDataInterface" parent="." instance=ExtResource("6_j3rf8")]
visible = false
layout_mode = 1

[node name="Settings2" parent="." instance=ExtResource("7_awfu6")]
visible = false
layout_mode = 1

[node name="Shop2" parent="." instance=ExtResource("10_476cf")]
visible = false
layout_mode = 1

[node name="SHORT MESSAGE" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.0
offset_top = -91.5
offset_right = 301.0
offset_bottom = 91.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_qjmw7")

[node name="Panel" type="Panel" parent="SHORT MESSAGE"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 602.0
offset_bottom = 387.0

[node name="Label" type="Label" parent="SHORT MESSAGE"]
layout_mode = 0
offset_left = 34.0
offset_top = 43.0
offset_right = 182.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_8r7t0")
theme_override_font_sizes/font_size = 30
text = "WARNING"

[node name="Label2" type="Label" parent="SHORT MESSAGE"]
layout_mode = 0
offset_left = 39.0
offset_top = 80.0
offset_right = 558.0
offset_bottom = 147.0
text = "	Meron na inventory ui di ko lang alam pano lagay in game tsaka dyan HAHAHA"
autowrap_mode = 2

[connection signal="mouse_entered" from="SettingsButton" to="." method="_on_settings_button_mouse_entered"]
[connection signal="mouse_exited" from="SettingsButton" to="." method="_on_settings_button_mouse_exited"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="ShopButton" to="." method="_on_shop_button_mouse_entered"]
[connection signal="mouse_exited" from="ShopButton" to="." method="_on_shop_button_mouse_exited"]
[connection signal="pressed" from="ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="mouse_entered" from="PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="InventoryButton" to="." method="_on_inventory_button_mouse_entered"]
[connection signal="mouse_exited" from="InventoryButton" to="." method="_on_inventory_button_mouse_exited"]
[connection signal="pressed" from="InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="mouse_entered" from="ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="ExitButton" to="." method="_on_exit_button_mouse_exited"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="data_saved_interface_closed" from="SavedDataInterface" to="." method="_on_saved_data_interface_data_saved_interface_closed"]
[connection signal="settings_closed" from="Settings2" to="." method="_on_settings_2_settings_closed"]
[connection signal="shop_closed" from="Shop2" to="." method="_on_shop_2_shop_closed"]
